# Network_security

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  mlflow.db  pyproject.toml
.github/workflows/: main.yaml
artifact/03_03_2026_20_43_47/data_ingestion/feature_store/: network_security.csv
artifact/03_03_2026_20_43_47/data_ingestion/ingested/: test.csv  train.csv
network_security/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
network_security/constants/training_pipeline/: __init__.py
network_security/entity/: artifact_entity.py  config_entity.py
network_security/exception/: exception.py
network_security/pipeline/: training_pipeline.py
network_security/utils/main_utils/: utils.py
network_security/utils/ml_utils/metric/: classification_metric.py
network_security/utils/ml_utils/model/: estimator.py
